--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="assets/js/jquery.scrolly.min.js"></script>
     <script src="assets/js/jquery.min.js"></script>
 
-    <title>Xidong Mu - Homepage</title>
+    <title>Wei Fang - Homepage</title>
     <link href="./mystyle.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
@@ -33,7 +33,7 @@
         </div>
         <div id="bio">
             <h1 style="line-height: 40px; vertical-align: text-top">
-                Xidong Mu
+                Wei Fang
             </h1>
             <p style="line-height: 40px;font-size: 15px;">
                 Lecturer (Assistant Professor) <br/>
